fix width of aside block on mobile devices

--- a/css/style.scss
+++ b/css/style.scss
@@ -46,7 +46,7 @@ body {
 }
 
 .aside {
-    width: 270px;
+    width: 275px;
     min-width: 242px;
 }
 
